--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,3 +1,3 @@
 FROM python:3.9.7-slim-bullseye
 WORKDIR /usr/src
-RUN pip3 install --no-cache-dir Flask==2.0.1 gunicorn==20.1.0 requests==2.26.0
+RUN pip3 install --no-cache-dir Flask==2.0.1 gunicorn==20.1.0 requests
