--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - net_clock_with_weather
 secrets:
     weather_secrets:
-        file: ./secret.txt
+        file: ./weather_secrets.txt
 networks: 
     net_clock_with_weather:
         driver: bridge
